--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: "3.8"
 
 services:
   neo4j:
-    image: neo4j:4.2.5
+    image: neo4j:5.13.0
     platform: linux/amd64
     container_name: my_neo4j
     ports:
       - 7474:7474
       - 7687:7687
     environment:
-      - NEO4J_AUTH=neo4j/docker
+      - NEO4J_AUTH=neo4j/docker1234
     volumes:
       - neo4j_data:/data
       - neo4j_logs:/logs
@@ -26,7 +26,7 @@ services:
     environment:
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
-      - NEO4J_PASSWORD=docker
+      - NEO4J_PASSWORD=docker1234
     depends_on:
       - neo4j
 
